Configuration for building docker images